LPS-62623 Add z-index to prevent the ellipsis is superimposed

--- a/modules/apps/workflow/workflow-instance-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/workflow/workflow-instance-web/src/main/resources/META-INF/resources/css/main.scss
@@ -3,6 +3,7 @@
 		float: right;
 		position: absolute;
 		right: 10px;
+		z-index: 1;
 	}
 
 	.task-content-actions {
