--- a/modules/apps/workflow/workflow-task-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/workflow/workflow-task-web/src/main/resources/META-INF/resources/css/main.scss
@@ -270,6 +270,7 @@
 		float: right;
 		position: absolute;
 		right: 10px;
+		z-index: 1;
 	}
 
 	.task-activity {
